# Uatu

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  SECURITY.md  docker-compose.yml  vcpkg.json
.github/workflows/: release.yml
cmake/toolchains/: aarch64-linux-gnu.cmake  riscv64-linux-gnu.cmake
docs/: architecture.md  cross-compile.md  docker.md  faq.md  install.md  integration.md  quick-start.md
docs/commands/: stack.md  trace.md  watch.md
ebpf/: trace.bpf.c  vmlinux.h  watch.bpf.c
examples/: CMakeLists.txt  demo.sh
examples/01_basic/: README.md  main.cpp
examples/02_exception/: README.md  main.cpp
examples/03_slow_path/: README.md  main.cpp
include/uatu/: types.h
include/uatu/cli/: formatter.h
include/uatu/dwarf/: symbol_finder.h
include/uatu/ebpf/: uprobe_loader.h
include/uatu/engine/: attach_engine.h
include/uatu/platform/: arch.h
include/uatu/protocol/: json_codec.h
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  formatter.cpp  main.cpp
src/dwarf/: CMakeLists.txt  symbol_finder.cpp
src/ebpf/: CMakeLists.txt  uprobe_loader.cpp
src/engine/: CMakeLists.txt  attach_engine.cpp
src/protocol/: CMakeLists.txt  json_codec.cpp
tests/: CMakeLists.txt
tests/fixtures/: CMakeLists.txt  target.cpp
tests/integration/: CMakeLists.txt  helpers.h  test_stack.cpp  test_trace.cpp  test_watch.cpp
tests/unit/: CMakeLists.txt  test_json_codec.cpp  test_symbol_finder.cpp
